# EnviroControl

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
EnviroControl/: CMakeLists.txt  main.cpp  main_window.cpp
EnviroControl/AutomationEngine/: AbstractCondition.h  AutomationEngine.h  AutomationWidget.h  CMakeLists.txt  DeviceStateWidget.h  ManualDeviceControlWidget.h  RuleSet.h  RulesProcessor.h  abstract_condition.cpp  automation_engine.cpp  automation_widget.cpp  device_state_widget.cpp  manual_device_control_widget.cpp  rule_set.cpp  rules_processor.cpp
EnviroControl/AutomationEngine/tests/: WeatherDataCreator.h  test_calculate_device_states.cpp  test_condition.cpp  test_rule.cpp
EnviroControl/Config/: CMakeLists.txt  ConfigParser.h  config_parser.cpp
EnviroControl/DeviceController/: CMakeLists.txt  DeviceDriver.h  DeviceState.h  DeviceStateManager.h  device_driver.cpp  device_state_manager.cpp  test_device_driver.cpp
EnviroControl/ErrorDetail/: CMakeLists.txt  ErrorDetail.h  error_detail.cpp
EnviroControl/Logging/: CMakeLists.txt  Logging.h  logging.cpp
EnviroControl/MainWindow/: CMakeLists.txt  ErrorDetailsWidget.h  MainWindow.h  MainWindow.ui  error_details_widget.cpp  main_window.cpp
EnviroControl/Resources/: resources.qrc
EnviroControl/Resources/icons/: designer.pptx
EnviroControl/Resources/qml_resources/: SunPlot.qml  Thermometer.qml  WindWheel.qml
EnviroControl/Resources/style_sheets/: history_tabs.qss  navigation_bar.qss  station_frame.qss
EnviroControl/WeatherForecastProvider/: CMakeLists.txt  ForecastData.h  WeatherForecast.h  forecast_data.cpp  weather_forecast.cpp
EnviroControl/WeatherStation/: CMakeLists.txt  IndoorStation.h  IndoorStationWidget.h  SunChartWidget.h  SunPlotWidget.h  ThermometerWidget.h  WeatherData.h  WeatherDataFormat.h  WeatherDataLogger.h  WeatherHistoryWidget.h  WeatherHistoryWidgetBase.h  WeatherStation.h  WeatherStationMock.h  WeatherStationWidget.h  WindRainChartWidget.h  WindWheelWidget.h  indoor_station.cpp  indoor_station_widget.cpp  sun_chart_widget.cpp  sun_plot_widget.cpp  thermometer_widget.cpp  waether_history_widget_base.cpp  weather_data_logger.cpp  weather_history_widget.cpp  weather_station.cpp  weather_station_if.cpp  weather_station_mock.cpp  weather_station_widget.cpp  wind_rain_chart_widget.cpp  wind_wheel_widget.cpp
PyDHT22Reader/: main.py
